# Legends-of-Azeroth-Pandaria-5.4.8

./: CMakeLists.txt  revision.h.in.cmake
.github/workflows/: macos-arm-build.yml  windows-build.yml
cmake/platform/unix/: settings.cmake
dep/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/readline/: CMakeLists.txt
sql/updates/master/world/: 2023_11_06_23_18.sql  2023_11_07_world_00.sql  2023_11_21_world_01.sql  2023_11_30_world_spells.sql  2024_05_15_00.sql  2024_06_14_00.sql  2024_06_29_01_world.sql  2024_07_18_00_world.sql  2024_07_22_00_world.sql  2024_07_XX_XX_world.sql  2024_XX_XX_XX_world.sql  20XX_XX_XX_XX_world.sql
sql/updates/world/: 2024_07_XX_XX_alliance_pandria_intro.sql  2024_07_XX_XX_world.sql
src/common/: Define.h
src/server/authserver/: CMakeLists.txt
src/server/database/: CMakeLists.txt
src/server/database/Database/: DatabaseWorkerPool.cpp  MySQLConnection.cpp  MySQLConnection.h  SQLOperation.h  Transaction.cpp  Transaction.h
src/server/database/Database/Implementation/: WorldDatabase.cpp
src/server/game/: CMakeLists.txt
src/server/game/AI/SmartScripts/: SmartScript.cpp
src/server/game/Anticheat/: AnticheatMgr.cpp
src/server/game/AuctionHouse/: AuctionHouseMgr.h
src/server/game/Battlegrounds/: Battleground.cpp
src/server/game/Cinematic/: CinematicPathMgr.cpp  CinematicPathMgr.h
src/server/game/DataStores/: DB2Stores.cpp  DBCStores.cpp  DBCStructure.h  DBCfmt.h  M2Stores.cpp
src/server/game/DungeonFinding/: LFGMgr.cpp  LFGMgr.h  LFGQueue.cpp
src/server/game/Entities/Corpse/: Corpse.cpp  Corpse.h
src/server/game/Entities/Creature/: Creature.cpp  Creature.h  CreatureData.h  GossipDef.cpp  GossipDef.h
src/server/game/Entities/GameObject/: GameObject.cpp
src/server/game/Entities/Object/: Object.cpp  Object.h  Position.h
src/server/game/Entities/Pet/: Pet.cpp
src/server/game/Entities/Player/: CinematicMgr.cpp  Player.cpp  Player.h
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/server/game/Handlers/: AuctionHouseHandler.cpp  CharacterHandler.cpp  LFGHandler.cpp  MiscHandler.cpp  QueryHandler.cpp  QuestHandler.cpp
src/server/game/LuaEngine/: AuraMethods.h  CorpseMethods.h  GameObjectMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  LuaEngine.cpp  LuaFunctions.h  MapMethods.h  ObjectMethods.h  QueryMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h
src/server/game/Maps/: Map.cpp
src/server/game/Miscellaneous/: Language.h  SharedDefines.h
src/server/game/Quests/: QuestDef.cpp  QuestDef.h
src/server/game/Server/: WorldPacket.h  WorldSession.h  WorldSocket.cpp  WorldSocket.h
src/server/game/Spells/: Spell.cpp  SpellEffects.cpp
src/server/game/Texts/: CreatureTextMgr.cpp
src/server/game/Warden/: WardenWin.cpp
src/server/game/Weather/: Weather.cpp
src/server/game/World/: World.cpp  World.h
src/server/scripts/Commands/: cs_misc.cpp  cs_npc.cpp  cs_reload.cpp  cs_support.cpp
src/server/scripts/Events/: brewfest.cpp
src/server/scripts/Kalimdor/: zone_tanaris.cpp  zone_teldrassil.cpp
src/server/scripts/Northrend/: zone_borean_tundra.cpp  zone_sholazar_basin.cpp
src/server/scripts/Spells/: spell_druid.cpp  spell_hunter.cpp
src/server/scripts/World/: go_scripts.cpp
src/server/shared/DataStores/: DBCEnums.h
src/server/worldserver/: CMakeLists.txt  worldserver.conf.dist
src/tools/map_extractor/: System.cpp
src/tools/mmaps_generator/: CMakeLists.txt
(+15 files in other folders)
